<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="@string/user_display_name"
        app:defaultValue="Your Name"
        app:title="@string/pref_user_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="yourname@address.com"
        android:key="@string/user_display_email"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:key="@string/user_display_favorite_social"
        app:defaultValue="Google"
        app:entries="@array/pref_entries_favorite_social"
        app:entryValues="@array/pref_values_favorite_social"
        app:title="@string/pref_user_social_network"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
